# strat3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  README.md  bug.md  config_canvas  config_canvas.json
benchmark/: CMakeLists.txt  fibonacci_bench.cpp
build-linux/: CMakeCache.txt  cmake_install.cmake  ps.txt  pv.txt  strat3.cbp  to.txt  tw.txt
build-linux/Abstract/: cmake_install.cmake
build-linux/Struct/: cmake_install.cmake
build-strat3-Desktop-/: CMakeCache.txt  cmake_install.cmake  strat3.cbp
build-strat3-Desktop-/Backtester/: backtester  cmake_install.cmake
build-strat3-Desktop-/StrategyLog/: cmake_install.cmake
build-strat3-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  strat3.cbp
build-strat3-Desktop-Default/DataLog/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/DataManager/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/Error/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/Portfolio/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/Predictor/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/Report/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/Security/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/Strategy/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/cml/: CTestTestfile.cmake  cmake_install.cmake
build-strat3-Desktop-Default/test/: CTestTestfile.cmake  cmake_install.cmake
cmake/: FindEigen.cmake
data/: 2assets.csv  2assets_date.csv  abg_data.csv  config.s3  data.csv  data.xlsx  data_lilia.csv  date.csv  date_test.csv  test.csv
data/css/: style.css
data/js/: drawgraph.js  drawgraph.options.js  drawgraph.options.print.js  (+3 more)
dependencies/: CMakeLists.txt
doc/: backtest.dia  backtest.dia~  make.bat  run.bat
docs/: CMakeLists.txt  conf.py  index.rst  make.bat  run.bat
docs/source/: Strat2 Structure.rst  conf.py  index.rst
docs/source/classes/: DataManager.rst  DataTable.rst  MarketEngine.rst  Portfolio.rst  Strategy.rst  Tester.rst  Transaction.rst  TransactionMatrix.rst
docs/source/predictor/: Predictor.rst
gnuplot/: cumulative.gp  data.py  gplot_script.gp
src/: CMakeLists.txt  enum.h  revision_data.h.in.cmake
src/Abstract/: CMakeLists.txt  Portfolio.h  Strategy.h  Types.h
src/Backtester/: Backtester.cpp  Backtester.h  CMakeLists.txt  DynamicObject.h  ErrorPolicy.h  Pointer.h  SharedLibrary.cpp  SharedLibrary.h  main.cpp
src/DataManager/: CMakeLists.txt  MatrixIO.h  MatrixManager.cpp  MatrixManager.h  MatrixQuery.cpp  enum.h
src/DataManager/old/: DataManager.cpp  DataManager.h  DataQuery.h
src/GUI/: MainWindow.h  main.cpp
src/Log/: CMakeLists.txt  Log.h
src/Report/: CMakeLists.txt  DataAnalyzer.h  Latex.cpp  Latex.h  script.cpp
src/StrategyLog/: StrategyLog.h
src/Struct/: CMakeLists.txt  DataStruct.h  Transaction.h  TransactionAnswer.h
src/cml/: BacktestBuilder.h  CMakeLists.txt  Settings.cpp  Settings.h  cml.cpp
src/default/: CMakeLists.txt
src/graphics/: CMakeLists.txt  Painter.h  Shapes.h  item.h
src/network/: CMakeLists.txt  server.cpp  types.h
strat3/: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1  Tester.cpp  Tester.h  copy of CMakeLists.txt.bak  debug.h  enum.h  smath.cpp  smath.h
strat3/Abstract/: AbstractData.h  AbstractLog.h  AbstractMarketEngine.h  AbstractPortfolio.h  AbstractStrategy.h  AbstractTester.h  AbstractTransactionAnswer.h  AbstractTransactionOrder.h  AbstractTransactionWeight.h  Config.h  Plugin.h  Portfolio.h  README.md  Strategy.h  StrategyLog.h
strat3/Backtester/: Backtester.cpp  Backtester.h  CMakeLists.txt  DLLoader.cpp  DLLoader.h  DynamicObject.h  ErrorPolicy.h  ModuleBase.h  Plugin.h  SharedLibrary.cpp  SharedLibrary.h  main.cpp  main.cpp.Wc7918
strat3/DataLog/: DataLog.cpp  DataLog.h
strat3/DataManager/: Buffer.h  CMakeLists.txt  DataManager.cpp  DataManager.h  DataManager.h.old  DataQuery.cpp  DataQuery.h  MatrixManager.cpp  MatrixManager.h  MatrixQuery.cpp  MatrixQuery.h  all.h
strat3/DataManager/old/: DataManager.h  DataManagerDisk.h
strat3/Error/: FileError.h  ImplementationError.h
strat3/GUI/: CMakeLists.txt  MainWindow.cpp
strat3/Log/: CMakeLists.txt  Log.h
strat3/Portfolio/: MarketEngine.cpp  MarketEngine.h  Portfolio.cpp  Portfolio.h  Transaction.cpp  Transaction.h  TransactionAnswer.cpp  TransactionAnswer.h
strat3/Predictor/: Predictor.cpp  Predictor.h
strat3/Report/: DataAnalyzer.cpp  DataAnalyzer.cpp.k10292  DataAnalyzer.h  HTML.h  HTMLReport.cpp  HTMLReport.h  HTMLdef.h  Latex.cpp  Latex.h  Report.cpp  Report.h  Statistics.cpp  Statistics.h  TEXReport.cpp  TEXReport.h  script.cpp  script.h  visitor.h
strat3/Security/: Securities.cpp  Securities.h
strat3/Strategy/: DataStruct.h  MaximumDiversification.cpp  MaximumDiversification.h  Strategy.cpp  Strategy.h  VarianceMin.cpp  VarianceMin.h
strat3/StrategyLog/: StrategyLog.cpp  StrategyLog.h  StrategyLogSQLite.h
strat3/Struct/: CMakeLists.txt  DataStruct.h  Transaction.h  TransactionAnswer.h  TransactionWeight.cpp  TransactionWeight.h
strat3/cml/: BacktestBuilder.cpp  BacktestBuilder.cpp.autosave  BacktestBuilder.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  OptionFile.cpp  OptionFile.h  cml.cpp  cml.h  main.cpp
strat3/default/: CMakeLists.txt  MovingAverageStrategy.cpp  StandardPortfolio.cpp  StandardStrategy.cpp
strat3/graphics/: CMakeLists.txt  Chart.h  Painter.cpp  Painter.h  Scale.h  main.cpp  old.txt  utility.h
strat3/graphics/ft/: Chart.h
strat3/network/: CMakeLists.txt  client.cpp
strat3/network/common/: DataRequest.h
strat3/python/: DataManager.h  Matrix.cpp  Matrix.h  Strategy.h  test.cpp
strat3/test/: DataLogTest.h  DataManagerTest.h  PortfolioTest.h  StrategyTest.h  TesterTest.h  Tests.h  main_cml_test.cpp  main_test.cpp  option_reader.h  test_python.py
tests/: CMakeLists.txt  fibonacci_test.cpp
win-build/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake  strat3.cbp
(+27 files in other folders)
