#
#   Closer to asynchronous Backtester
#

#add_executable(server server.cpp)
#SET_PROPERTY(TARGET server PROPERTY CXX_STANDARD 11)
#target_link_libraries(server ${SFML_LIBRARIES})

#add_executable(client client.cpp)
#SET_PROPERTY(TARGET client PROPERTY CXX_STANDARD 11)
#target_link_libraries(client ${SFML_LIBRARIES})
